Using LLM from GenAI, and enable Phi3, Qwen2, TinyLlama, DeepSeek

--- a/demos/phi-3-mini/index.html
+++ b/demos/phi-3-mini/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>WebNN Developer Preview - Phi-3 Mini</title>
+    <title>WebNN Developer Preview - LLM</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="apple-touch-icon" sizes="180x180" href="./static/favicon/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="./static/favicon/favicon-32x32.png">
@@ -66,7 +66,7 @@
                 <circle cx="101" cy="90" r="15" fill="#666666" class="_logo_n1" />
                 <circle cx="156" cy="131" r="15" fill="#666666" class="_logo_n1" />
             </svg>
-            <span id="title">WebNN</span> Phi-3 Mini
+            <span id="title">WebNN</span> LLM
         </h1>
         <div id="badge" class="">
             <div class="badge-text">
