Add profiler for WebGPU

--- a/demos/text-generation/index.html
+++ b/demos/text-generation/index.html
@@ -645,6 +645,7 @@ z" />
 				</button>
 			</div>
 			<div class="key-notes">
+				<div id="download"></div>
 				<div class="enter"><span class="key">enter</span> continue the conversation</div>
 				<div class="center">·</div>
 				<div class="ctrl-enter"><span class="key">ctrl</span><span class="key">enter</span>clears the chat
