Add trace, fix webgpu ep with latest ort-web

--- a/demos/segment-anything/index.html
+++ b/demos/segment-anything/index.html
@@ -104,7 +104,7 @@
             <div class="right">
                 <div class="data">
                     <div>
-                        <strong id="decoder_latency"></strong>
+                        <span style="font-size: 40px; font-weight: bold;" id="decoder_latency"></span>
                         <span id="unit"></span>
                     </div>
                     <div id="sam-decoder-indicator" class="title none">SAM Decoder · FP16</div>
