Add new TinyLLama model for WebGPU with latest config

--- a/index.html
+++ b/index.html
@@ -334,7 +334,7 @@
       <div class="description">
         <div class="g3-1">
           <div class="tags">
-            <span>Phi-3</span> <span>TinyLlama</span> <span>Qwen2</span> <span>DeepSeek</span>
+            <span>Phi-3</span> <span>TinyLlama V2</span> <span>TinyLlama</span> <span>Qwen2</span> <span>DeepSeek</span>
           </div>
           <div class="tags backend">
             <span>GPU</span>
